--- a/frontend/src/scss/index.scss
+++ b/frontend/src/scss/index.scss
@@ -15,11 +15,19 @@ code {
     monospace;
 }
 
-button{
+button {
         background-color: transparent;
         border: none;
         cursor: pointer;
         outline: none;
         padding: 0;
         appearance: none;
+}
+
+ul {
+  padding-left: 0;
+}
+
+li {
+  list-style: none;
 }
